--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "An Oracle JavaScript Extension Toolkit(JET) web app",
   "dependencies": {
-    "@oracle/oraclejet": "~6.1.0",
+    "@oracle/oraclejet": "^6.2.0",
     "qunitjs": "^2.4.1"
   },
   "devDependencies": {
