--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "1.0.0",
   "description": "An Oracle JavaScript Extension Toolkit(JET) web app",
   "dependencies": {
-    "@oracle/oraclejet": "~8.1.0"
+    "@oracle/oraclejet": "~8.1.3",
+    "jquery": "^3.5.0"
   },
   "devDependencies": {
-    "@oracle/oraclejet-tooling": "~8.1.0"
+    "@oracle/oraclejet-tooling": "~8.2.0"
   },
   "engines": {
     "node": ">=0.10.0"
+  },
+  "resolutions": {
+    "jquery": "3.5.0"
+  },
+  "scripts": {
+    "preinstall": "npx npm-force-resolutions"
   },
   "private": true
 }
